# qdap-protocol

./: .dockerignore  .git_message.txt  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PHASE_10_1_SIGCOMM_Paper.md  PHASE_10_2_IETF_Draft.md  PHASE_8_1_Full_Rust.md  PHASE_8_2_Cloud_WAN.md  PHASE_8_3_IBM_Quantum.md  PHASE_8_4_Formal_Security.md  PHASE_9_1_HTTP_Proxy.md  PHASE_9_2_WebSocket.md  PHASE_9_3_MQTT_Broker.md  PHASE_9_4_K8s_Sidecar.md  QDAP_100MB_Fix_Guide.md  QDAP_Adaptive_Chunk_Guide.md  QDAP_Agent_Briefing.md  QDAP_Batch_Guide.md  QDAP_Blueprint.md  QDAP_Chunk_Fix_Guide.md  QDAP_Docker_Benchmark_Guide.md  QDAP_Final_Benchmark_Plan.md  QDAP_MQTT_Benchmark_Guide.md  QDAP_Phase2_Guide.md  QDAP_Phase3_Guide.md  QDAP_Phase4_Guide.md  QDAP_Phase5_Guide.md  QDAP_QUIC_Debug_Fix.md  QDAP_QUIC_Fix_Guide.md  QDAP_Rust_HotPath_Guide.md  QDAP_Security_Guide.md  QDAP_Three_Improvements_Guide.md  README.md  deploy_vps.sh  docker-compose.real-servers.yml  docker-compose.yml  (+7 more)
.github/workflows/: publish.yml  test.yml
.hypothesis/constants/: 07f8163694868236  0c4298cb68695f40  163b20831486f2b7  16f2923cb43c51ea  1dfb1cb98b906635  21c963d0dfc3a93e  2304bab607406389  2676544ac4e6835a  2d1e0ccea3a3a7d2  2e7b89356598ad93  2eb9f1d9adbfca57  352ccf87d197fd46  3bd06ae17f67260c  3f5b3658f36c35cb  43471e3c6c2694d7  444ce46695c4189c  4461e86ac9536609  46d78d0cc2767445  48de874c88b3d861  4f262863ffd8415f  53273410b75e5db5  557b8045f68084e1  5771b0940f08c34f  5928a644e77707d0  5e69a6cfd0c5a2ac  618de29b5ad902ff  6473f5c2775acc2a  661c59d06e3fcb33  70c4da54c092c29d  7313aabc0f8519fd  73620ced9dd2f79c  7636c907e5809f5f  77c82a9e638453eb  7810da53f9fbadd7  7b9a2f7df66ea2c6  84b263cf9acfd9ad  88e532a6c5c32ac3  8afc9d5a3bc3823a  8c4fb7ecf0123737  8ce0d6dd909ab644  (+28 more)
benchmarks/: README.md  ablation_study.py  bptt_vs_ema_benchmark.py  file_transfer_benchmark.py  harness.py  iot_comprehensive.py  lan_benchmark.py  mqtt_broker_benchmark.py  protocol_comparison.py  qframe_scheduler_benchmark.py  real_protocol_benchmark.py  real_server_benchmark.py  run_all.py  rust_vs_python_benchmark.py  statistical_analysis.py  streaming_benchmark.py  throughput_benchmark.py  video_streaming_benchmark.py  video_streaming_v2.py  visualize_comparison.py  wan_client.py  wan_client_v2.py  wan_server.py  wan_server_v2.py
benchmarks/baseline/: __init__.py  large_payload_benchmark.py  real_tcp_baseline.py
benchmarks/metrics/: ack_overhead.py  latency.py  priority.py  throughput.py
benchmarks/report/: __init__.py  generator.py
benchmarks/results/: adaptive_benchmark_v3.json  adaptive_benchmark_v4.json  docker_benchmark.json  large_payload_benchmark.json  latest.json  (+4 more)
checks/: check_new_benchmarks.py
demo/: index.html
docker_benchmark/: Dockerfile.receiver  Dockerfile.sender  docker-compose.yml  run_three_benchmarks.py
docs/: api-reference.md  mathematical-foundations.md
examples/: README.md  basic_demo.py  lan_demo.py  proxy_demo.sh  quickstart.py  ws_demo.html
paper/: README.md  generate_figures.py  main.tex  refs.bib
qdap_core/: Cargo.toml
qdap_core/src/: amplitude.rs  chunker.rs  crypto.rs  delta.rs  fec.rs  ghost_session.rs  lib.rs  qframe.rs  qft_scheduler.rs  qft_scheduler_old_algorithm.rs  x25519.rs
scripts/: build_rust.sh
security_proofs/: qdap_forward_secrecy.pv  qdap_handshake.pv  qdap_replay.pv  qdap_security_proof.pv  qdap_security_proof_v2.pv  qdap_security_proof_v3.pv  run_proofs.sh
simulations/: qdap_iot_simulation.py
tests/: __init__.py  test_ablation.py  test_broker.py  test_channel_stamps.py  test_convergence.py  test_decision_dag.py  test_delta_compression.py  test_encoder.py  test_fuzzing.py  test_ghost_session.py  test_ghost_session_adaptive.py  test_http_proxy.py  test_integration.py  test_markov_bptt.py  test_parallel_streaming.py  test_pqc_handshake.py  test_protocol_comparison.py  test_qframe.py  test_qframe_rust.py  test_rust_bridge.py  test_scheduler.py  test_session_cache.py  test_session_resumption.py  test_statistical.py  test_ws_adapter.py
tools/: qdap_dissector.lua
wan_benchmark/: wan_receiver.py  wan_sender.py
website/: index.html
(+222 files in other folders)
