[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qdap"
version = "0.1.0"
description = "Quantum-Inspired Dynamic Application Protocol"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "QDAP Team" }]
keywords = [
    "quantum-inspired", "networking", "protocol",
    "quantum-computing", "application-layer", "6G"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "cryptography>=42.0",
    "rich>=13.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0", "qiskit-aer>=0.14"]
quic = ["aioquic>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-timeout",
    "psutil>=5.9",
    "hypothesis>=6.0",
]
all = ["qdap[qiskit,quic,dev]"]

[project.urls]
Homepage = "https://github.com/qdap-protocol/qdap"
Issues = "https://github.com/qdap-protocol/qdap/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qdap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
