[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qdap"
version = "0.1.0"
description = "Quantum-Inspired Dynamic Application Protocol"
license = { text = "MIT" }
authors = [{ name = "Bahadir Bakla", email = "bahadirbakla@gmail.com" }]
keywords = [
    "quantum-inspired", "networking", "protocol",
    "quantum-computing", "application-layer", "6G"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "cryptography>=42.0",
    "msgpack>=1.0",
    "aiohttp>=3.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
# pip install qdap[viz]    — benchmark grafikleri ve analiz
viz    = ["matplotlib>=3.8", "rich>=13.0", "scipy>=1.12"]
# pip install qdap[qiskit] — Qiskit dogrulama (opsiyonel)
qiskit = ["qiskit>=1.0", "qiskit-aer>=0.14"]
# pip install qdap[quic]   — QUIC/HTTP3 transport
quic   = ["aioquic>=1.0"]
# pip install qdap[dev]    — gelistirme ve test araclari
dev    = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-timeout",
    "psutil>=5.9",
    "hypothesis>=6.0",
    "rich>=13.0",
    "scipy>=1.12",
]
# pip install qdap[all]    — her sey
all    = ["qdap[viz,qiskit,quic,dev]"]

[project.scripts]
qdap = "qdap.cli:main"

[project.urls]
Homepage = "https://qdap.dev"
Repository = "https://github.com/bahadir-bakla/qdap-protocol"
Issues = "https://github.com/bahadir-bakla/qdap-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qdap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
